# datasheet_downloader

./: .gitignore  digikey.py  digikey_pw.py  get_data.py  lcsc.py  main.py  new_parts.csv  new_parts.xlsx  parts.txt  parts_prod_unique.csv  pdf_downloader.py  pyproject.toml  snapeda.py  snapeda_accounts.csv
cookies/: Banoon.json  Donallu.json  Gangstershahaka.json  Mariyamra.json  Monalueue.json  Nehakakar.json  Rayaana.json  abundant_loon.json  ahmshaao.json  artificial_boar.json  beautiful_parakeet.json  comfortable_mole.json  dynamic_cobra_tvfe.json  few_herring_pqfo.json  handsome_pike.json  husnsha.json  injured_cheetah_ptyu.json  ismail4433.json  low_tarantula.json  musical_meerkat_njrn.json  philosophical_monkey.json  remarkable_wildebeest_hygl.json  retired_pheasant_gxqy.json  scrawny_pig_rbhc.json  shbalusha.json  spicy_moose.json  wittering_alpaca.json  worldwide_buzzard_zfwk.json
