[project]
name = "package-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "selectolax>=0.4.0",
    "selenium>=4.36.0",
    "seleniumbase>=4.42.5",
    "undetected-chromedriver>=3.5.5",
]
